--- a/templates/menu.hbs
+++ b/templates/menu.hbs
@@ -10,6 +10,13 @@
                   <button type="button" class="flip-delete" data-idx={{value.idx}}><i class="fas fa-trash"></i></button>
                 </div>
             </div>
+            <div class="form-group scale children-disabled">
+                <label>Scale</label>
+                <div class="form-fields">
+                    <input type="range" name="scale" value={{value.scale}} min="0.2" max="3.0" step="0.1" class="scale-value" data-idx={{value.idx}}>
+                    <span class="range-value">{{value.scale}}</span>
+                </div>
+            </div>
         </fieldset>
     {{/each}}
 
